# codeinterpreter-api

./: .env.example  .gitignore  .pre-commit-config.yaml  .python-version  404.html  Dockerfile  LICENSE  README.md  dev-setup.sh  docker-compose.yaml  index.html  mkdocs.yml  pyproject.toml  roadmap.todo  sitemap.xml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  code-check.yml  python-publish.yml
bitcoin_chart/: index.html
code_interpreter_response/: index.html
code_interpreter_session/: index.html
codebox/: index.html
codeinterpreterapi/: __init__.py  callbacks.py  chat_history.py  config.py  parser.py  schemas.py  session.py
codeinterpreterapi/agents/: __init__.py  custom_agent.py  functions_agent.py
codeinterpreterapi/chains/: __init__.py  extract_code.py  functions_agent.py  modifications_check.py  remove_download_link.py  rm_dl_link.py
codeinterpreterapi/prompts/: __init__.py  modifications_check.py  remove_dl_link.py  system_message.py
codeinterpreterapi/schema/: __init__.py  file.py  input.py  response.py  status.py
codeinterpreterapi/utils/: __init__.py  callbacks.py  parser.py
concepts_overview/: index.html
deploy/: index.html
docs/: bitcoin_chart.md  code_interpreter_response.md  code_interpreter_session.md  codebox.md  concepts_overview.md  deploy.md  file.md  index.md  installation.md  iris_dataset.md  settings.md  streamlit_webapp.md  usage.md  user_request.md  welcome.md
examples/: Iris.csv  analyze_dataset.py  anthropic_claude.py  chat_cli.py  chat_history_backend.py  convert_file.py  plot_sin_wave.py  show_bitcoin_chart.py  use_additional_tools.py
examples/assets/: iris.csv
examples/frontend/: app.py  chainlitui.py  utils.py
file/: index.html
frontend/: app.py  chainlitui.py  code_interpreter.py  db_manager.py  demo.py  utils.py
installation/: index.html
iris_dataset/: index.html
search/: search_index.json
settings/: index.html
src/codeinterpreterapi/: __init__.py  _patch_parser.py  chat_history.py  config.py  parser.py  schema.py  session.py
src/codeinterpreterapi/agents/: __init__.py  functions_agent.py
src/codeinterpreterapi/chains/: extract_code.py  modifications_check.py  rm_dl_link.py
src/codeinterpreterapi/prompts/: modifications_check.py  remove_dl_link.py  system_message.py
src/codeinterpreterapi/schema/: __init__.py  file.py  response.py  status.py
streamlit_webapp/: index.html
tests/: chain_test.py  general_test.py  run_examples.py
usage/: index.html
user_request/: index.html
