[tool.poetry]
name = "codeinterpreterapi"
version = "0.0.14"
authors = ["Shroominic <contact@shroominic.com>"]
license = "MIT"
description = "CodeInterpreterAPI is an (unofficial) open source python interface for the ChatGPT CodeInterpreter."
keywords = ["codeinterpreter", "chatgpt", "codeinterpreterapi", "api", "langchain", "codeboxapi"]
readme = "README.md"
repository = "https://github.com/shroominic/codeinterpreter-api"

[tool.poetry.dependencies]
python = ">=3.9.7,<4.0"
langchain = ">=0.0.312"
codeboxapi = ">=0.0.19"
openai = "*"
python-dotenv = "*"
pydantic = "^2"
pydantic-settings = "^2"
mkdocs-material = ">=9.2.7"
streamlit = { version = "^1", optional = true }
jupyter-kernel-gateway = { version = "^2", optional = true }
Pillow = { version = ">=9,<11", optional = true }

[tool.poetry.extras]
all = ["jupyter-kernel-gateway", "streamlit", "Pillow"]
localbox = ["jupyter-kernel-gateway"]
frontend = ["streamlit"]
image_support = ["Pillow"]

[tool.poetry.group.dev]
optional = true

[tool.pytest.ini_options]
filterwarnings = "ignore::DeprecationWarning"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3"
mypy = ">=1.4"
black = "^23"
flake8 = "^6"
pre-commit = ">=3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
